@@ -80,4 +80,5 @@ include_directories(${PROJ4_SOURCE_DIR}/src)
 message(STATUS "")
 add_subdirectory(nad)
 add_subdirectory(src)
+add_subdirectory(man)
 
